<?xml version="1.0" encoding="utf-8"?>

<!--
@author Brady Murphy
@author Andrew
@version July 22, 2018
-->
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeScreen" >


    <ImageView
        android:id="@+id/choose_your_drink"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/Start_Partying"
        android:layout_alignParentStart="true"
        android:foregroundGravity="top"
        android:src="@drawable/choose_title" />

    <ImageButton
        android:id="@+id/settings_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:src="@drawable/setting_symbol"
        android:background="@null"
        android:onClick="openSettings"/>

    <LinearLayout
        android:id="@+id/liquors"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_centerVertical="true"
        android:layout_marginStart="8dp"
        android:layout_centerHorizontal="true">

        <ImageButton
            android:id="@+id/tequila"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:contentDescription="@string/tequila"
            android:src="@drawable/tequila_button"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            android:onClick="startTequilaActivity" />

        <ImageButton
            android:id="@+id/rum"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:clickable="true"
            android:contentDescription="@string/rum"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            android:onClick="startRumActivity"
            android:src="@drawable/rum_button" />

        <ImageButton
            android:id="@+id/gin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:contentDescription="@string/gin"
            android:src="@drawable/gin_button"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            android:onClick="startGinActivity"/>

        <ImageButton
            android:id="@+id/vodka"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@null"
            android:contentDescription="@string/vodka"
            android:src="@drawable/vodka_button"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?attr/selectableItemBackgroundBorderless"
            android:onClick="startVodkaActivity"/>

    </LinearLayout>


    <ImageButton
        android:id="@+id/party_mode"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@android:color/transparent"
        android:clickable="true"
        android:contentDescription="@string/Start_Partying"
        android:focusable="true"
        android:foregroundGravity="bottom"
        android:onClick="startPartyModeActivity"
        android:src="@drawable/partymode_button" />

</RelativeLayout>