<?xml version="1.0" encoding="utf-8"?>

<!--
@author Brady Murphy
@author Andrew
@version July 22, 2018
-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".GinActivity">

    <!-- *Row for "Gin" Title* -->
    <ImageView
        android:id="@+id/gin_screen_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/rum"
        android:src="@drawable/gin_title" />

    <!-- back button -->
    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="24dp"
        android:layout_marginStart="16dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/vodka"
        android:src="@drawable/back_main_button"
        android:clickable="true"
        android:focusable="true"
        android:onClick="goBack"/>

    <!-- Scroll view used to contain all drink buttons -->
    <HorizontalScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/gin_screen_title">

        <!-- layout used to create a single parent for ScrollView -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/gin_and_tonic_container"
                    android:onClick="openGinAndTonic"/>


                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/tom_collins_container"
                    android:onClick="openTomCollins"/>


                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/salty_dog_container"
                    android:onClick="openSaltyDog"/>

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/gimlet_container"
                    android:onClick="openGimlet" />

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/gin_rickey_container"
                    android:onClick="openGinRickey"/>

                <ImageButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginLeft="24dp"
                    android:layout_marginRight="24dp"
                    android:background="@android:color/transparent"
                    android:contentDescription="@string/app_name"
                    android:src="@drawable/gin_shot_container"
                    android:onClick="openGinShot"/>
        </LinearLayout>
    </HorizontalScrollView>
</RelativeLayout>