<?xml version="1.0" encoding="utf-8"?>

<!--
@author Brady Murphy
@author Andrew
@version July 22, 2018
-->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".VodkaActivity">

    <!-- *Row for "Vodka" Title* -->
    <ImageView
        android:id="@+id/vodka_screen_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/rum"
        android:src="@drawable/vodka_title" />

    <!-- back button -->
    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="24dp"
        android:layout_marginStart="16dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/vodka"
        android:src="@drawable/back_main_button"
        android:clickable="true"
        android:focusable="true"
        android:onClick="goBack"/>

    <!-- Scroll view used to contain all drink buttons -->
    <HorizontalScrollView
        android:id="@+id/horizontal_vodka_scroll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/vodka_screen_title"
        android:layout_marginTop="8dp">

        <!-- layout used to create a single parent for ScrollView -->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/app_name"
                android:onClick="openVodkaCran"
                android:src="@drawable/vodka_cran_container" />


            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/app_name"
                android:onClick="openScrewdriver"
                android:src="@drawable/screwdriver_container" />


            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/app_name"
                android:onClick="openVodkaBull"
                android:src="@drawable/vodka_bull_container" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/app_name"
                android:onClick="openVodkaTonic"
                android:src="@drawable/vodka_tonic_container" />


            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/app_name"
                android:onClick="openSeabreeze"
                android:src="@drawable/seabreeze_container" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/app_name"
                android:onClick="openMadras"
                android:src="@drawable/madras_container" />

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/app_name"
                android:onClick="openVodkaShot"
                android:src="@drawable/vodka_shot_container" />
        </LinearLayout>
    </HorizontalScrollView>
</RelativeLayout>